[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/background.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/bird.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/interface.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/main.gd" type="Script" id=4]
[ext_resource path="res://scenes/enemy_spawner.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/star_spawner.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/sfx/Under_the Sea_16-bit.mp3" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 144, 63.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 144, 10 )

[node name="Main" type="Node2D" groups=["Difficulty"]]
position = Vector2( 1, 0 )
script = ExtResource( 4 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 1 )]
scenario_speed = 200

[node name="Bird" parent="." instance=ExtResource( 2 )]
position = Vector2( 144, 200 )
scale = Vector2( 1.3, 1.3 )
gravity_speed = 400
jump_speed = -200

[node name="Interface" parent="." instance=ExtResource( 3 )]

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 144, 456 )

[node name="Collision" type="CollisionShape2D" parent="Floor"]
position = Vector2( 0, -7.5 )
shape = SubResource( 1 )

[node name="RingSpawner" parent="." instance=ExtResource( 6 )]
position = Vector2( 299, 1 )
ring_speed = 70

[node name="EnemySpawner" parent="." instance=ExtResource( 5 )]
position = Vector2( 343, 0 )

[node name="Sky" type="StaticBody2D" parent="."]
position = Vector2( 8, -6 )
__meta__ = {
"_edit_group_": true
}

[node name="Collision" type="CollisionShape2D" parent="Sky"]
position = Vector2( 134, 0 )
shape = SubResource( 2 )

[node name="Sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -15.0

[connection signal="pressed" from="Interface/ButtonContainer/Button" to="Bird" method="button_pressed"]
[connection signal="finished" from="Sfx" to="." method="sfx_finished"]

[editable path="Interface"]
